--- a/Art Book/Base.lproj/Main.storyboard
+++ b/Art Book/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UHi-Mn-ICm">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Art_Book" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,134 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Nza-aB-C6a">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Nza-aB-C6a" secondAttribute="trailing" id="URT-wi-7zn"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Nza-aB-C6a" secondAttribute="bottom" id="bdl-23-7DW"/>
+                            <constraint firstItem="Nza-aB-C6a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kiT-23-vVz"/>
+                            <constraint firstItem="Nza-aB-C6a" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="nkj-IC-iO3"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="vEC-9H-w2W">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="BS1-W5-xti">
+                            <connections>
+                                <action selector="addButonClicked:" destination="BYZ-38-t0r" id="oXj-y7-4pB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="Nza-aB-C6a" id="Bgm-Hz-VRp"/>
+                        <segue destination="uFG-YO-PMI" kind="show" identifier="toCreateVC" id="RYf-Ns-sxb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1079.2" y="138.98050974512745"/>
+        </scene>
+        <!--CreateVC-->
+        <scene sceneID="NJv-yp-rHA">
+            <objects>
+                <viewController id="uFG-YO-PMI" customClass="createVC" customModule="Art_Book" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AKG-i9-CSL"/>
+                        <viewControllerLayoutGuide type="bottom" id="DWx-IK-gXP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Bo0-I2-akd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tapme.png" translatesAutoresizingMaskIntoConstraints="NO" id="grj-kA-qff">
+                                <rect key="frame" x="21" y="87" width="332" height="176"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="176" id="A8Y-IC-mZV"/>
+                                    <constraint firstAttribute="width" constant="332" id="eob-dh-fI7"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Painting Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eSe-hp-SFW" userLabel="Name Text">
+                                <rect key="frame" x="21" y="286" width="332" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder=" Enter Artist Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="afd-be-9mK" userLabel="Artist Text">
+                                <rect key="frame" x="21" y="332" width="332" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Year of Painting" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="teG-N6-KXq" userLabel="Year Text">
+                                <rect key="frame" x="21" y="378" width="332" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HCk-aq-gdE">
+                                <rect key="frame" x="266" y="453" width="87" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="87" id="QLB-bj-aJj"/>
+                                </constraints>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveButtonClicked:" destination="uFG-YO-PMI" eventType="touchUpInside" id="maU-0z-BWS"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="teG-N6-KXq" firstAttribute="top" secondItem="afd-be-9mK" secondAttribute="bottom" constant="16" id="EF0-tG-Gix"/>
+                            <constraint firstItem="eSe-hp-SFW" firstAttribute="trailing" secondItem="afd-be-9mK" secondAttribute="trailing" id="Fsd-6q-7q9"/>
+                            <constraint firstItem="grj-kA-qff" firstAttribute="leading" secondItem="eSe-hp-SFW" secondAttribute="leading" id="GKk-je-3w8"/>
+                            <constraint firstItem="grj-kA-qff" firstAttribute="centerX" secondItem="Bo0-I2-akd" secondAttribute="centerX" id="LXR-Iu-NFe"/>
+                            <constraint firstItem="grj-kA-qff" firstAttribute="leading" secondItem="Bo0-I2-akd" secondAttribute="leadingMargin" constant="5" id="NF3-LH-3VE"/>
+                            <constraint firstItem="teG-N6-KXq" firstAttribute="trailing" secondItem="HCk-aq-gdE" secondAttribute="trailing" id="Sza-gw-Yoq"/>
+                            <constraint firstItem="HCk-aq-gdE" firstAttribute="top" secondItem="teG-N6-KXq" secondAttribute="bottom" constant="45" id="d4E-w6-uVZ"/>
+                            <constraint firstItem="grj-kA-qff" firstAttribute="top" secondItem="AKG-i9-CSL" secondAttribute="bottom" constant="23" id="eNA-hB-N5a"/>
+                            <constraint firstItem="afd-be-9mK" firstAttribute="top" secondItem="eSe-hp-SFW" secondAttribute="bottom" constant="16" id="hwA-CC-F5A"/>
+                            <constraint firstItem="DWx-IK-gXP" firstAttribute="top" secondItem="HCk-aq-gdE" secondAttribute="bottom" constant="184" id="nCK-7r-Nhr"/>
+                            <constraint firstItem="grj-kA-qff" firstAttribute="trailing" secondItem="eSe-hp-SFW" secondAttribute="trailing" id="pTq-q6-2RD"/>
+                            <constraint firstItem="eSe-hp-SFW" firstAttribute="leading" secondItem="afd-be-9mK" secondAttribute="leading" id="s9r-Hp-juH"/>
+                            <constraint firstItem="afd-be-9mK" firstAttribute="leading" secondItem="teG-N6-KXq" secondAttribute="leading" id="skI-w4-azl"/>
+                            <constraint firstItem="eSe-hp-SFW" firstAttribute="top" secondItem="grj-kA-qff" secondAttribute="bottom" constant="23" id="xic-mv-Toe"/>
+                            <constraint firstItem="afd-be-9mK" firstAttribute="trailing" secondItem="teG-N6-KXq" secondAttribute="trailing" id="y0M-42-RM9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="artistText" destination="afd-be-9mK" id="jM8-jT-21f"/>
+                        <outlet property="imageView" destination="grj-kA-qff" id="8gj-6b-AYT"/>
+                        <outlet property="nameText" destination="eSe-hp-SFW" id="jTo-ea-dFv"/>
+                        <outlet property="yearText" destination="teG-N6-KXq" id="VZj-TO-FJs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ziy-cm-Lxt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1826.4000000000001" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yKv-ta-UQg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UHi-Mn-ICm" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xjd-6t-pdx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="SvN-Wh-sXK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ryn-Bc-H4O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="140" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tapme.png" width="332" height="176"/>
+    </resources>
 </document>
